small ui bug when image sent is too small

--- a/static/petfinder/style.css
+++ b/static/petfinder/style.css
@@ -2,6 +2,10 @@ h1 {
     color: #424242;
 }
 
+.full-width {
+    width: 100%;
+}
+
 .padding-sm {
     padding: 10px;
 }
